--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@
     width: 100vw;
     height: 100vh;
   }
-  .one {
+  .header {
     border-style: solid;
     border-color: blue;
     background-color: #F2D785;
@@ -49,7 +49,7 @@
     grid-row-start: 2;
     grid-row-end: 5;
   }
-  .four {
+  .footer {
     border-style: solid;
     border-color: aqua;
     background-color: #F2D785;
