--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,10 @@
     padding-bottom: 10px;
   }
 
+  .footer {
+    text-align: center;
+  }
+
   #logo-1{
     background-color: rgba(240, 248, 255, 0.161);
     height: 100%;
